--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,6 +41,15 @@ steps:
   ]
   waitFor: ['-']
 
+- id: "docker:blockchain-api"
+  name: gcr.io/kaniko-project/executor:v0.16.0
+  args: [
+    "--dockerfile=dockerfiles/blockchain-api/Dockerfile",
+    "--cache=true",
+    "--destination=us.gcr.io/$PROJECT_ID/celo-monorepo:blockchain-api-$COMMIT_SHA"
+  ]
+  waitFor: ['-']
+
 - id: "docker:leaderboard"
   name: gcr.io/kaniko-project/executor:v0.16.0
   args: [
