--- a/dockerfiles/attestation-service/Dockerfile
+++ b/dockerfiles/attestation-service/Dockerfile
@@ -11,7 +11,7 @@ COPY packages/utils/package.json packages/utils/
 COPY packages/dev-utils/package.json packages/dev-utils/
 COPY packages/protocol/package.json packages/protocol/
 COPY packages/contractkit/package.json packages/contractkit/
-COPY packages/attestation-service/package.json packages/attestation-service/
+COPY packages/blockchain-api/package.json packages/blockchain-api/
 
 RUN yarn install --frozen-lockfile --network-timeout 100000 && yarn cache clean
 
@@ -21,12 +21,12 @@ COPY packages/utils packages/utils/
 COPY packages/dev-utils packages/dev-utils/
 COPY packages/protocol packages/protocol/
 COPY packages/contractkit packages/contractkit/
-COPY packages/attestation-service packages/attestation-service/
+COPY packages/blockchain-api packages/blockchain-api/
 
 ENV NODE_ENV production
 
 # build all
 RUN yarn build
 
-WORKDIR /celo-monorepo/packages/attestation-service
+WORKDIR /celo-monorepo/packages/blockchain-api
 ENTRYPOINT ["node", "lib/index.js"]
